[package]
name = "stm32ral-example"
version = "0.1.0"
authors = ["Adam Greig <adam@adamgreig.com>"]

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
panic-halt = "0.2.0"

[dependencies.stm32ral]
version = "0.1.0"
features = ["stm32f405", "rt"]

[profile.dev]
opt-level = 1

[profile.release]
debug = true
lto = true
codegen-units = 1
incremental = false
